# worker-campaign

./: ChangeLog  Makefile.am  config.xml  configure.ac
db_dump/requests/: getCampaings.sql  getInformer.sql
db_dump/tables/: 00_Campaign.sql  11_Device.sql  16_Informer.sql
include/: BaseCore.h  Campaign.h  Config.h  Core.h  Core_DataBase.h  GeoRerions.h  Informer.h  Params.h  ParentDB.h
src/: BaseCore.cpp  BoostHelpers.cpp  Campaign.cpp  CgiService.cpp  Config.cpp  Core.cpp  Core_DataBase.cpp  DataBase.cpp  GeoRerions.cpp  Informer.cpp  Params.cpp  ParentDB.cpp
